--- a/recipemanager/templates/delete_successful.html
+++ b/recipemanager/templates/delete_successful.html
@@ -1,13 +1,15 @@
-{% extends 'main.html' %}
+{% extends 'base.html' %}
+
 
 {% block content %}
-
-<div>
-    The recipe has been successfully deleted!
+<div class="wrap">
+    <fieldset>
+        <legend><h3>Recipe <br> Deleted!</h3></legend>
+    <form action="{% url 'all_recipes' %}">
+        <input type="submit" id="button" value="Back to all recipes">
+   </form>
+    </fieldset>
 </div>
-
-<div>
-    <a href="{% url 'all_recipes' %}">Back to all Recipes</a>
-</div>
-
 {% endblock %}
+
+
