--- a/recipemanager/templates/registration/password_reset_complete.html
+++ b/recipemanager/templates/registration/password_reset_complete.html
@@ -1,6 +1,12 @@
-{% extends 'main.html' %}
-{% block header %}Password reset complete{% endblock %}
+{% extends 'base.html' %}
 
 {% block content %}
-<p><a href="{% url 'login' %}">Login</a></p>
+<div class="wrap">
+    <fieldset>
+        <legend><h3>Reset Complete</h3></legend>
+    <form action="{% url 'login' %}">
+        <input type="submit" id="button" value="Login">
+   </form>
+    </fieldset>
+</div>
 {% endblock %}
