--- a/recipemanager/templates/registration/password_reset_confirm.html
+++ b/recipemanager/templates/registration/password_reset_confirm.html
@@ -1,15 +1,22 @@
-{% extends 'main.html' %}
-
-{% block header %}Reset Password{% endblock %}
+{% extends 'base.html' %}
 
 {% block content %}
     {% if validlink %}
-        <form method="post">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit">Submit</button>
-        </form>
+<div class="wrap">
+    <form method="post">
+        <fieldset>
+            <legend><h3>Reset Password</h3></legend>
+                {% csrf_token %}
+                <input type="password" class="form" id="id_password" name="password1" placeholder="Password"/>
+                    {{ form.password1.errors }}
+                <input type="password" class="form" id="id_password" name="password1" placeholder="Confirm Password"/>
+                    {{ form.password2.errors }}
+            <input type="submit" id="button" value="Submit">
+        </fieldset>
+    </form>
+</div>
     {% else %}
         <p>This reset link is no longer valid!</p>
     {% endif %}
 {% endblock %}
+
