--- a/recipemanager/templates/registration/password_reset_form.html
+++ b/recipemanager/templates/registration/password_reset_form.html
@@ -1,11 +1,16 @@
-{% extends 'main.html' %}
-
-{% block header %}Reset Password{% endblock %}
+{% extends 'base.html' %}
 
 {% block content %}
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Submit</button>
-</form>
+<div class="wrap">
+    <form method="post">
+        <fieldset>
+            <legend><h3>Reset Password</h3></legend>
+                {% csrf_token %}
+                <input type="text" class="form" id="id_email" maxlength="254" name="email" placeholder="Email"/>
+                    {{ form.email.errors }}
+            <input type="submit" id="button" value="Submit">
+        </fieldset>
+    </form>
+</div>
 {% endblock %}
+
