--- a/recipemanager/templates/homepage.html
+++ b/recipemanager/templates/homepage.html
@@ -1,44 +1,76 @@
-{% extends 'main.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
-
-{% if user.is_authenticated %}
-    <h1>Hello {{ user.username }}</h1>
-    <a href="{% url 'logout' %}">Logout</a><br />
-{% else %}
-    <a href="{% url 'register' %}">Register</a>
-    <a href="{% url 'login' %}">Login</a>
-{% endif %}
-
-<a href="{% url 'all_recipes' %}">View all Recipes</a>
-    <br>
-
-<a href="{% url 'add_recipe' %}">Add a new recipe</a>
-
-<form method="get">
-<input id="searchbox" name="q" type="text" placeholder="Search Recipes">
-<input type="submit" value="Submit">
-
-
-{% if found_entries %}
-    <p>Here are all recipes containing the word(s) "{{ query_string }}"</p>
-    <div>
-        {% for recipe in found_entries %}
-            {% if user.is_authenticated %}
-            <ul><a href="{% url 'full_recipe' recipe.id %}">{{ recipe.title }}</a></ul>
+<div class="wrap">
+    <form method="get">
+        <fieldset>
+            <legend><h3>Welcome <br> to <br>-</h3></legend>
+            {% csrf_token %}
+                <input class="form" name="q" type="text" placeholder="Search Recipes">
+                <input type="submit" id="button" value="Search">
+            {% if found_entries %}
+                <p>Here are all recipes containing the word(s) "{{ query_string }}"</p>
+                {% for recipe in found_entries %}
+                    {% if user.is_authenticated %}
+                        <p><a href="{% url 'full_recipe' recipe.id %}">{{ recipe.title }}</a></p>
+                    {% endif %}
+                    <p class="links"><a href="{% url 'all_recipes' %}">Back to all Recipes</a></p>
+                {% endfor %}
             {% endif %}
-            <a href="{% url 'all_recipes' %}">Back to all Recipes</a>
-        {% endfor %}
-    </div>
-{% endif %}
-
-{% if query_string and not found_entries %}
-    <p>No results found.</p>
-    <br>
-    <a href="{% url 'all_recipes' %}">Back to all Recipes</a>
-
-{% endif %}
-</form>
-
+            {% if query_string and not found_entries %}
+                <p>No results found.</p>
+                <br>
+                <p class="links"><a href="{% url 'all_recipes' %}">Back to all Recipes</a></p>
+            {% endif %}
+        <p class="links">
+            <a href="{% url 'all_recipes' %}">View all recipes</a>
+            <br>
+            <a href="{% url 'add_recipe' %}">Add a new recipe</a>
+        </p>
+        </fieldset>
+    </form>
+          {% for recipe in recipes %}
+        <div class="content">
+            <div class="recipe">
+                <div class="image">
+                    <a href="{% url 'full_recipe' recipe.id %}"><img src="{{ recipe.photo.url }}"></a>
+                    <div class="name">
+                        <h4>{{ recipe.title }}</h4>
+                    </div>
+                </div>
+                <ul class="media">
+                    <li>{{ recipe.get_category_display }}</li>
+                </ul>
+            </div>
+        </div>
+    {% endfor %}
+</div>
 
 {% endblock %}
+
+
+{##}
+{#<form method="get">#}
+{#<input id="searchbox" name="q" type="text" placeholder="Search Recipes">#}
+{#<input type="submit" value="Submit">#}
+{##}
+{##}
+{#{% if found_entries %}#}
+{##}
+{#    <div>#}
+{#        {% for recipe in found_entries %}#}
+{#            {% if user.is_authenticated %}#}
+{#            <ul><a href="{% url 'full_recipe' recipe.id %}">{{ recipe.title }}</a></ul>#}
+{#            {% endif %}#}
+{#            <a href="{% url 'all_recipes' %}">Back to all Recipes</a>#}
+{#        {% endfor %}#}
+{#    </div>#}
+{##}
+{##}
+{#{% if query_string and not found_entries %}#}
+{#    <p>No results found.</p>#}
+{#    <br>#}
+{#    <a href="{% url 'all_recipes' %}">Back to all Recipes</a>#}
+{##}
+{#{% endif %}#}
+{#</form>#}
