capstone project in progress - added shopping cart

--- a/recipemanager/templates/add_recipe.html
+++ b/recipemanager/templates/add_recipe.html
@@ -23,10 +23,10 @@
                 <option value="DRK">Drink</option>
                 <option value="SDW">Sandwich</option>
             </select>
-        <textarea cols="40" class="form" id="id_ingredients" name="ingredients" rows="100"
+        <textarea cols="40" class="textarea" id="id_ingredients" name="ingredients" rows="100"
                   placeholder="Ingredients - 1 ingredient per line"></textarea>
 
-        <textarea cols="40" class="form" id="id_directions" name="directions" rows="100"
+        <textarea cols="40" class="textarea" id="id_directions" name="directions" rows="100"
                   placeholder="Directions - 1 set of directions per line"></textarea>
 {#                <input type="text" id="form" name="category" placeholder="Category"/>#}
 
@@ -34,9 +34,8 @@
 
 {#                <input type="text" id="form" name="directions" placeholder="Directions"/>#}
 {#                <input type="password" id="form" name="photo" placeholder="Recipe Photo"/>#}
-           <input id="id_photo" class="link" name="photo" type="file">
+           <input id="id_photo" class="links" name="photo" type="file">
             <p><img src="{{ recipe.photo.url }}" alt={{ recipe.title }}></p>
-
 
         <input type="submit" id="button" value="{{ button_name }} Recipe">
         </fieldset>
