--- a/recipemanager/templates/delete_successful.html
+++ b/recipemanager/templates/delete_successful.html
@@ -5,7 +5,7 @@
 <div class="wrap">
     <fieldset>
         <legend><h3>Recipe <br> Deleted!</h3></legend>
-    <form action="{% url 'all_recipes' %}">
+    <form action="{% url 'recipes' %}">
         <input type="submit" id="button" value="Back to all recipes">
    </form>
     </fieldset>
