--- a/recipemanager/templates/registration/logged_out.html
+++ b/recipemanager/templates/registration/logged_out.html
@@ -4,7 +4,7 @@
 <div class="wrap">
     <fieldset>
         <legend><h3>Signed Out</h3></legend>
-        <p class="links"><a href="{% url 'homepage' %}">Return Home</a></p>
+        <p class="links"><a href="{% url 'recipes' %}">Return Home</a></p>
     <form action="{% url 'login' %}">
         <input type="submit" id="button" value="Login Again">
    </form>
