--- a/recipemanager/static/styling.css
+++ b/recipemanager/static/styling.css
@@ -3,8 +3,8 @@
 body {
     background: url(32058462_l.jpg);
     background-size: 100%;
-    margin:0 auto;
-    padding:0;
+    margin: 0 auto;
+    padding: 0;
     color: #faf5d2;
     list-style: none;
 }
@@ -18,39 +18,40 @@ header {
 
 #logged li {
     margin-left: 20px;
-    /*margin-right: 0px;*/
     padding: 10px 20px;
     display: block;
     float: right;
     color: #faf5d2;
     font-size: 14px;
     font-family: 'Roboto', sans-serif;
-    /*width: 60px;*/
 }
 
 .allrecipewrap {
-    margin-top: -325px;
+    margin-top: -250px;
     width: 800px;
     margin-left: 350px;
+    margin-bottom: 20px;
 }
+
 .wrap {
     margin-top: -250px;
     width: 500px;
     margin-left: 38%;
+    margin-bottom: 20px;
 }
 
 fieldset{
     width: 400px;
-    border-radius:50px;
-    border-right:1px solid transparent;
-    border-left:1px solid transparent;
+    border-radius: 50px;
+    border-right: 1px solid transparent;
+    border-left: 1px solid transparent;
 }
 
 fieldset.allrecipes {
     width: 800px;
-    border-radius:50px;
-    border-right:1px solid transparent;
-    border-left:1px solid transparent;
+    border-radius: 50px;
+    border-right: 1px solid transparent;
+    border-left: 1px solid transparent;
 }
 
 legend{
@@ -66,7 +67,11 @@ legend{
     background: -o-linear-gradient(-45deg, #9c000c, #d56462);
     background: -ms-linear-gradient(-45deg, #9c000c, #d56462);
     background: linear-gradient(-45deg, #9c000c, #d56462);
-    box-shadow: 0 1px 1px #2c2b29;
+    opacity: 0.85;
+    filter: alpha(opacity=85);
+    zoom: 1;
+    box-shadow: 0 5px 5px #141312;
+    line-height: 5px;
 }
 
 legend.allrecipes {
@@ -75,54 +80,72 @@ legend.allrecipes {
     font-family: 'Roboto', sans-serif;
     height: 75px;
     margin-left: 300px;
-    border-radius: 25px;
+    border-radius: 20px;
     background: #ce4c4a;
-    background: -moz-linear-gradient(-45deg, #9c000c, #d5483c);
-    background: -webkit-linear-gradient(-45deg, #9c000c, #d5483c);
-    background: -o-linear-gradient(-45deg, #9c000c, #d5483c);
-    background: -ms-linear-gradient(-45deg, #9c000c, #d5483c);
-    background: linear-gradient(-60deg, #9c000c, #d5483c);
+    background: -moz-linear-gradient(-45deg, #9c000c, #d56462);
+    background: -webkit-linear-gradient(-45deg, #9c000c, #d56462);
+    background: -o-linear-gradient(-45deg, #9c000c, #d56462);
+    background: -ms-linear-gradient(-45deg, #9c000c, #d56462);
+    background: linear-gradient(-45deg, #9c000c, #d56462);
     opacity: 0.85;
     filter: alpha(opacity=85);
     zoom: 1;
-    box-shadow: 0 1px 1px #2c2b29;
+    box-shadow: 0 5px 5px #141312;
+    line-height: 5px;
 }
 
+.textarea {
+	width: 400px;
+	height: 300px;
+    margin-left:10px;
+    margin-top: 15px;
+    color: #8f7b5c;
+    font-family: 'Roboto', sans-serif;
+}
+
+.textarea:focus{
+    border: 1px solid #9c000c;
+    box-shadow: 0 1px 1px #2c2b29;
+    outline: none;
+    font-size: 1.1em;
+    font-family: 'Roboto', sans-serif;
+}
+
+
 h3{
-    position:relative;
-    padding-top:35px;
-    text-align:center;
+    position: relative;
+    padding-top: 35px;
+    text-align: center;
     color: white;
 }
 
 h2{
     text-align: center;
     font-size: 0.9em;
-    color:lightgrey;
+    color: lightgrey;
     padding-top: 10px;
     font-family: 'Roboto', sans-serif;
 }
 
 .category {
-    border:1px solid #9c000c;
+    border: 1px solid #9c000c;
     box-shadow: 0 1px 1px #2c2b29;
     outline: none;
     font-size: 1.1em;
     font-family: 'Roboto', sans-serif;
-    width:200px;
+    width: 200px;
     height: 30px;
-    margin-left:100px;
+    margin-left: 100px;
     margin-top: 15px;
     text-align: center;
-    /*border: 1px solid lightgrey;*/
     color: #8f7b5c;
     font-weight: bold;
 
 }
 .form{
-    width:200px;
+    width: 200px;
     height: 30px;
-    margin-left:100px;
+    margin-left: 100px;
     margin-top: 15px;
     text-align: center;
     /*border: 1px solid lightgrey;*/
@@ -131,7 +154,7 @@ h2{
 }
 
 .form:focus{
-    border:1px solid #9c000c;
+    border: 1px solid #9c000c;
     box-shadow: 0 1px 1px #2c2b29;
     outline: none;
     font-size: 1.1em;
@@ -139,15 +162,15 @@ h2{
 }
 
 #button{
-    width:170px;
+    width: 170px;
     font-family: 'Roboto', sans-serif;
     height: 50px;
     margin-top: 15px;
     text-align: center;
     color: #65523c;
     font-weight: bold;
-    margin-left:115px;
-    border-radius:25px;
+    margin-left: 115px;
+    border-radius: 25px;
     background: #8f7b5c;
     background: -moz-linear-gradient(-45deg, #b8a279, #faf5d2);
     background: -webkit-linear-gradient(-45deg, #b8a279, #faf5d2);
@@ -160,7 +183,7 @@ h2{
 }
 
 #button:focus{
-    border:1px solid #65523c;
+    border: 1px solid #65523c;
     box-shadow: 0 1px 1px #2c2b29;
     outline: none;
     font-size: 18px;
@@ -186,7 +209,6 @@ h2{
     text-decoration: none;
     color: white;
     font-size: 20px;
-    /*font-weight: bold;*/
     font-family: 'Roboto', sans-serif;
 }
 
@@ -442,6 +464,128 @@ h4 {
     padding: 0px;
 }
 
+#addItem{
+    width: 170px;
+    font-family: 'Roboto', sans-serif;
+    height: 50px;
+    margin-top: 15px;
+    text-align: center;
+    color: #65523c;
+    font-weight: bold;
+    margin-left: 115px;
+    border-radius: 25px;
+    background: #8f7b5c;
+    background: -moz-linear-gradient(-45deg, #b8a279, #faf5d2);
+    background: -webkit-linear-gradient(-45deg, #b8a279, #faf5d2);
+    background: -o-linear-gradient(-45deg, #b8a279, #faf5d2);
+    background: -ms-linear-gradient(-45deg, #b8a279, #faf5d2);
+    background: linear-gradient(-45deg, #b8a279, #faf5d2);
+    box-shadow: 0 2px 2px #2c2b29;
+    border: #65523c;
+    cursor:pointer;
+}
+
+#addItem:focus{
+    border: 1px solid #65523c;
+    box-shadow: 0 1px 1px #2c2b29;
+    outline: none;
+    font-size: 18px;
+    cursor:pointer;
+}
+
+li#list{
+    margin-left: 42px;
+    cursor: pointer;
+    line-height: 1.5;
+    transition: all 0.3s;
+    list-style-type: none;
+    font-size: 30px;
+    font-weight: bold;
+    font-family: 'Handlee', cursive;
+    color: #151515;
+}
+
+li#list.complete{
+    opacity:0.3;
+    transition: all 0.3s;
+
+}
+
+#controls{
+    margin-top: 40px;
+}
+
+#controls p {
+    text-align: center;
+    color: #444444;
+    font-size: 20px;
+    font-family: 'Handlee', cursive;
+    text-shadow: 0px 1px 0px black;
+}
+
+#clearAllItems {
+    background: transparent;
+    border: 1px solid #cdcdcd;
+    font-size: 30px;
+    font-family: 'Montez', cursive;
+    cursor: pointer;
+    text-align: center;
+    transition: all 0.3s;
+    text-shadow: 0px 1px 0px #717171;
+    color: #151515;
+}
+#clearAllItems:hover {
+     /*background: #4471b3;*/
+     text-decoration:none;
+ }
+
+.accordion, .accordion * {
+    -webkit-box-sizing:border-box;
+    -moz-box-sizing:border-box;
+    box-sizing:border-box;
+}
+
+.accordion {
+    overflow: hidden;
+    border-radius: 3px;
+    width: 960px;
+    margin: 0 auto;
+    margin-top: 10px;
+
+}
+
+.accordion-section {
+    float: left;
+    width: 480px;
+    display: none;
+}
+
+.accordion-section-title {
+    width: 100%;
+    padding: 15px;
+    display: inline-block;
+    transition: all linear 0.15s;
+    font-size: 35px;
+    text-shadow: 0px 1px 0px #717171;
+    color: #000000;
+    text-align: center;
+    font-family: 'Montez', cursive;
+}
+
+.accordion-section-title.active, .accordion-section-title:hover {
+    /*background: #4471b3;*/
+    text-decoration:none;
+    color: white;
+}
+
+.accordion-section-content {
+    padding:15px;
+    display:none;
+}
+
+a {
+    text-decoration: none;
+}
 /* Pulse Animation for Firefox, Opera and Internet Explorer 10 */
 @keyframes pulse {
   from {
