--- a/recipemanager/templates/base.html
+++ b/recipemanager/templates/base.html
@@ -3,13 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" href="/static/styling.css">
+    {% load static from staticfiles %}
+    <link rel="stylesheet" href="{% static 'styling.css' %}">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <!-- Bootstrap -->
-{#    <link href="{% static 'css/bootstrap-fluid-adj.css' %}" rel="stylesheet">#}
-{#    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" media="screen">#}
-{#    <link href="{% static 'css/bootstrap-responsive.css' %}" rel="stylesheet">#}
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <script src="{% static 'shoppinglist.js' %}"></script>
+    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 </head>
 
 <body>
@@ -17,15 +15,14 @@
 {% block header %}
     <header id="logged">
         {% if user.is_authenticated %}
-            <li id="user">Hello {{ user.username }}</li>
+            <li id="user">Hello {{ user.first_name }}</li>
         {% endif %}
     </header>
     <div id='menu'>
         <ul>
-            <li id="home" class="active"><a href="{% url 'homepage' %}">Home</a></li>
-            <li id="all"><a href="{% url 'all_recipes' %}">All Recipes</a></li>
+            <li id="all" class="active"><a href="{% url 'recipes' %}">All Recipes</a></li>
             <li id="add"><a href="{% url 'add_recipe' %}">Add a New Recipe</a></li>
-            <li id="shop"><a href="{% url 'add_recipe' %}">Shopping List</a></li>
+            <li id="shop"><a href="{% url 'shoppinglist' %}">Shopping List</a></li>
         {% if user.is_authenticated %}
             <li id="logout"><a href="{% url 'logout' %}">Logout</a></li>
         {% else %}
